--- a/day10/puzzle1/app/build.gradle
+++ b/day10/puzzle1/app/build.gradle
@@ -22,6 +22,14 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
+    implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 application {
